[package]
name = "macroquad_ldtk"
version = "1.0.0"
edition = "2021"
authors = ["error_27 <error27dev@gmail.com>"]
description = "LDtk integration with macroquad"
license = "MIT OR Apache-2.0"
repository = "https://github.com/error-27/macroquad_ldtk"
readme = "README.md"
categories = ["game-development"]
keywords = ["ldtk", "gamedev", "level", "editor", "macroquad"]
exclude = ["assets/*"]

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
